添加一些基本属性